# yaqd-seabreeze

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  run-entry-points.yml
example-seabreeze-script-module/: README.md  basic.py  chop.py
example-yaq-configs/: spectrometer.toml
yaqd_seabreeze/: VERSION  __init__.py  __version__.py  _seabreeze.py  _seabreeze_script.py  seabreeze-script.avpr  seabreeze-script.toml  seabreeze.avpr  seabreeze.toml
